--- a/project-app/package.json
+++ b/project-app/package.json
@@ -19,9 +19,11 @@
     "@angular/platform-browser": "~10.0.2",
     "@angular/platform-browser-dynamic": "~10.0.2",
     "@angular/router": "~10.0.2",
+    "angular-cli-ghpages": "^1.0.0-rc.1",
     "bootstrap": "^4.5.0",
     "jquery": "^3.5.1",
     "rxjs": "~6.5.5",
+    "save-dev": "0.0.1-security",
     "tslib": "^2.0.0",
     "zone.js": "~0.10.3"
   },
